Mobile, Tablet, Desktop Col

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="map"></div>
 	</div>
 	<!-- Search Start -->
-	<div class="col-md-6 col-sm-12 find-people">
+	<div class="col-md-4 col-sm-8 col-xs-10 find-people">
 		<div class="search-form-logo"></div>
 		<div class="row">
 		  <div class="col-md-12 col-sm-12">
